fix menu show on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -205,6 +205,7 @@ $xxlarge: 1700px;
   .home__desc {
     height: 300px;
     margin-right: 20%;
+    padding-top: 15%;
   }
   .home__text {
     font-size: 14px;
